--- a/AppCucinaProject/app/src/main/res/layout/activity_ricetta.xml
+++ b/AppCucinaProject/app/src/main/res/layout/activity_ricetta.xml
@@ -58,12 +58,12 @@
         fab:menu_labels_textColor="#f2f1f1"
         fab:menu_labels_textSize="15sp"
         fab:menu_openDirection="up"
-        fab:menu_shadowColor="#66aff198"
+        fab:menu_shadowColor="#E3F2FD"
         fab:menu_shadowRadius="4dp"
         fab:menu_shadowXOffset="1dp"
         fab:menu_shadowYOffset="4dp"
         fab:menu_showShadow="true"
-        android:layout_gravity="bottom|end">
+        android:layout_gravity="right|bottom|end">
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/material_design_floating_action_menu_item1"
