--- a/AppCucinaProject/app/src/main/res/layout/content_ricerca_av.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_ricerca_av.xml
@@ -40,6 +40,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/editText"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
                             android:hint="Nome ricetta"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentRight="true"
@@ -52,6 +54,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/editText2"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
                             android:layout_below="@+id/editText"
                             android:layout_alignLeft="@+id/editText"
                             android:layout_alignStart="@+id/editText"
@@ -77,6 +81,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/editText3"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
                             android:layout_below="@+id/editText2"
                             android:layout_toRightOf="@+id/textView3"
                             android:layout_alignRight="@+id/editText2"
@@ -87,6 +93,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/editText4"
+                            android:imeOptions="actionDone"
+                            android:inputType="text"
                             android:layout_below="@+id/editText3"
                             android:layout_alignLeft="@+id/editText3"
                             android:layout_alignStart="@+id/editText3"
