--- a/AppCucinaProject/app/src/main/res/layout/content_menu_del_giorno.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_menu_del_giorno.xml
@@ -8,10 +8,141 @@
     tools:context="com.example.studente.appcucinaproject.MenuDelGiorno.MenuDelGiorno"
     tools:showIn="@layout/app_bar_menu_del_giorno">
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewMenuDelGG"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_antipasto_mymenu"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                card_view:cardCornerRadius="4dp"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:id="@+id/imageViewAntipastomymenu"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/portata" />
+                <TextView
+                    android:id="@+id/titoloAntipastomymenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_alignBottom="@+id/imageViewAntipastomymenu"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="155dp"
+                    android:text="Antipasto"
+                    android:textAlignment="center"
+                    android:textSize="20sp" />
+
+            </android.support.v7.widget.CardView>
+
+
+
+
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_primo_mymenu"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                card_view:cardCornerRadius="4dp"
+                android:layout_below="@+id/card_antipasto_mymenu"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:id="@+id/imageViewPrimomymenu"
+                    android:layout_alignTop="@+id/card_antipasto_mymenu"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/portata" />
+
+                <TextView
+                    android:id="@+id/titoloPrimomymenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_alignBottom="@+id/imageViewPrimomymenu"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="155dp"
+                    android:text="Primo"
+                    android:textSize="20dp"
+                    android:textAlignment="center" />
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_secondo_mymenu"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                card_view:cardCornerRadius="4dp"
+                android:layout_below="@+id/card_primo_mymenu"
+                android:layout_marginTop="10dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:id="@+id/imageViewSecondomymenu"
+                    android:layout_alignTop="@+id/card_antipasto_mymenu"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/portata" />
+                <TextView
+                    android:id="@+id/titoloSecondomymenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_alignBottom="@+id/imageViewSecondomymenu"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="155dp"
+                    android:text="Secondo"
+                    android:textSize="20dp"
+                    android:textAlignment="center" />
+
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_dolce_mymenu"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                card_view:cardCornerRadius="4dp"
+                android:layout_below="@+id/card_secondo_mymenu"
+                android:layout_marginTop="10dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:id="@+id/imageViewDolcemymenu"
+                    android:layout_alignTop="@+id/card_antipasto_mymenu"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/portata" />
+
+                <TextView
+                    android:id="@+id/titoloDolcemymenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_alignBottom="@+id/imageViewDolcemymenu"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="155dp"
+                    android:text="Dolce"
+                    android:textAlignment="center"
+                    android:textSize="20dp" />
+
+            </android.support.v7.widget.CardView>
+
+        </RelativeLayout>
+    </ScrollView>
+    
 </RelativeLayout>
